
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buf ;


 unsigned char AYT ;
 int EXIT_FAILURE ;
 unsigned char IAC ;
 unsigned char TELOPT_ENCRYPT ;
 unsigned char TELOPT_NAOL ;
 unsigned char WILL ;
 int bs ;
 int bs34 ;
 int exit (int ) ;
 int hexdump (char*,unsigned char*,int) ;
 scalar_t__ memcmp (unsigned char*,unsigned char*,unsigned int) ;
 int mode ;
 int perror (char*) ;
 int printf (char*,...) ;
 int read (int,unsigned char*,int) ;
 int send (int,unsigned char*,int,int ) ;

int
xp_check (int fd)
{
        int n;
        unsigned int expect_len = 15;
        unsigned char expected[] =
                "\x0d\x0a\x5b\x59\x65\x73\x5d\x0d\x0a\xff\xfe\x08\xff\xfd\x26";

        unsigned int additional_len = 8;
        unsigned char additional[] =
                "\xff\xfa\x26\x01\x01\x02\xff\xf0";


        unsigned char buf[128];

        read (fd, buf, sizeof (buf));

        n = 0;
        buf[n++] = IAC;
        buf[n++] = AYT;

        buf[n++] = IAC;
        buf[n++] = WILL;
        buf[n++] = TELOPT_NAOL;

        buf[n++] = IAC;
        buf[n++] = WILL;
        buf[n++] = TELOPT_ENCRYPT;




        if (send (fd, buf, n, 0) != n) {
                perror ("xp_check:send");
                exit (EXIT_FAILURE);
        }

        n = read (fd, buf, sizeof (buf));




        if (memcmp (buf, expected, expect_len) == 0) {
                if (memcmp (buf+expect_len, additional, additional_len) == 0) {
                        mode = 16;
                } else {
                        mode = 34;
                        bs = bs34;
                }
                printf ("check: PASSED, using %dmb mode\n", mode);

                return (1);
        }

        printf ("check: FAILED\n");

        return (0);
}
